[package]
authors = ["DeltaPHC <phclem@protonmail.com>"]
categories = ["external-ffi-bindings"]
description = "Raw FFI bindings for Raylib"
documentation = "https://docs.rs/raylib-sys"
edition = "2018"
keywords = ["bindings", "raylib", "gamedev", "ffi"]
license = "Zlib"
name = "raylib-sys"
repository = "https://github.com/deltaphc/raylib-rs"
version = "3.0.0"

[build-dependencies]
cc = "1.0.58"
cmake = "0.1.44"
fs_extra = "1.1.0"

[features]
default = []
# Build Raylib headless for docs. Up to you to link
nobuild = []
