[package]
authors = ["DeltaPHC <phclem@protonmail.com>"]
categories = ["api-bindings", "game-engines", "graphics"]
description = "Safe Rust bindings for Raylib."
documentation = "https://docs.rs/raylib"
edition = "2018"
keywords = ["bindings", "raylib", "gamedev"]
license = "Zlib"
name = "raylib"
readme = "../README.md"
repository = "https://github.com/deltaphc/raylib-rs"
version = "3.0.0"

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.70"
raylib-sys = {version = "3.0", path = "../raylib-sys"}

[features]
nightly = []
nobuild = ["raylib-sys/nobuild"]

[package.metadata.docs.rs]
features = ["nobuild"]
