[package]
authors = ["Michael Fairley <michael@michaelfairley.com>"]
build = "build.rs"
categories = ["gui", "rendering::graphics-api"]
description = "An OpenGL renderer for imgui-rs"
homepage = "https://github.com/michaelfairley/rust-imgui-opengl-renderer"
license = "MIT/Apache-2.0"
name = "imgui-opengl-renderer"
readme = "README.md"
repository = "https://github.com/michaelfairley/rust-imgui-opengl-renderer"
version = "0.7.0"

[badges]
travis-ci = {repository = "michaelfairley/rust-imgui-opengl-renderer"}

[dependencies]
imgui = "0.6.1"

[build-dependencies]
gl_generator = "0.9.0"
